--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,7 @@
 {
   "name": "mxray-round-play-scrubber",
   "version": "0.0.0",
+  "homepage": "https://github.com/musicxrayinc/mxray-round-play-scrubber",
   "authors": [
     "jeff durand <jeff.durand@gmail.com>"
   ],
